Fix spectrometer background spilling out sides
[#55853594]

--- a/src/sass/lab/_interactive-components.sass
+++ b/src/sass/lab/_interactive-components.sass
@@ -484,6 +484,7 @@
 
 .interactive-spectrometer
   background: #fff
+  overflow: hidden
 
   .spectrometer-bg
     position: absolute
